CoolCompiler/output/CoolGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g 2012-01-27 23:47:03

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019

#pragma warning disable 3021

using System.Text;

using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace CoolCompiler
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class CoolGrammarParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "ATSIGN", "AtSignTypeName", "BoolTypeName", "BooleanValue", "CASE", "CLASS", "COLON", "COMMA", "COMMENT", "CaseExp", "Class", "ClassesList", "Curly", "DIGIT", "DIV", "DOT", "ELSE", "EQUAL", "ESAC", "Expr", "Exprs", "FALSE", "FI", "FeatureList", "FuncDef", "FunctionArgsList", "GE", "GT", "HENCE", "ID", "IF", "IN", "INHERITS", "INTEGER", "ISVOID", "IdValue", "ImplicitInvoke", "IntTypeName", "IntegerValue", "InvokeExprs", "LCURLY", "LE", "LET", "LETTER", "LOOP", "LPAREN", "LT", "LetExprs", "LocalOrFieldInit", "MINUS", "MULT", "MULTILINE_COMMENT", "NEG", "NEW", "NOT", "OF", "ObjectTypeName", "PLUS", "POOL", "RCURLY", "RPAREN", "SELF", "SEMI", "STRING", "SelfTypeTypeName", "SelfValue", "StringTypeName", "StringValue", "THEN", "TRUE", "Term", "VOID", "VoidValue", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ASSIGN=4;
	public const int ATSIGN=5;
	public const int AtSignTypeName=6;
	public const int BoolTypeName=7;
	public const int BooleanValue=8;
	public const int CASE=9;
	public const int CLASS=10;
	public const int COLON=11;
	public const int COMMA=12;
	public const int COMMENT=13;
	public const int CaseExp=14;
	public const int Class=15;
	public const int ClassesList=16;
	public const int Curly=17;
	public const int DIGIT=18;
	public const int DIV=19;
	public const int DOT=20;
	public const int ELSE=21;
	public const int EQUAL=22;
	public const int ESAC=23;
	public const int Expr=24;
	public const int Exprs=25;
	public const int FALSE=26;
	public const int FI=27;
	public const int FeatureList=28;
	public const int FuncDef=29;
	public const int FunctionArgsList=30;
	public const int GE=31;
	public const int GT=32;
	public const int HENCE=33;
	public const int ID=34;
	public const int IF=35;
	public const int IN=36;
	public const int INHERITS=37;
	public const int INTEGER=38;
	public const int ISVOID=39;
	public const int IdValue=40;
	public const int ImplicitInvoke=41;
	public const int IntTypeName=42;
	public const int IntegerValue=43;
	public const int InvokeExprs=44;
	public const int LCURLY=45;
	public const int LE=46;
	public const int LET=47;
	public const int LETTER=48;
	public const int LOOP=49;
	public const int LPAREN=50;
	public const int LT=51;
	public const int LetExprs=52;
	public const int LocalOrFieldInit=53;
	public const int MINUS=54;
	public const int MULT=55;
	public const int MULTILINE_COMMENT=56;
	public const int NEG=57;
	public const int NEW=58;
	public const int NOT=59;
	public const int OF=60;
	public const int ObjectTypeName=61;
	public const int PLUS=62;
	public const int POOL=63;
	public const int RCURLY=64;
	public const int RPAREN=65;
	public const int SELF=66;
	public const int SEMI=67;
	public const int STRING=68;
	public const int SelfTypeTypeName=69;
	public const int SelfValue=70;
	public const int StringTypeName=71;
	public const int StringValue=72;
	public const int THEN=73;
	public const int TRUE=74;
	public const int Term=75;
	public const int VOID=76;
	public const int VoidValue=77;
	public const int WHILE=78;
	public const int WS=79;

	public CoolGrammarParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public CoolGrammarParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return CoolGrammarParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:53:8: public program : ( classDef SEMI )+ -> ^( ClassesList ( classDef )+ ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<CommonTree, CommonToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken SEMI2 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> classDef1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree SEMI2_tree = default(CommonTree);
		RewriteRuleITokenStream stream_SEMI=new RewriteRuleITokenStream(adaptor,"token SEMI");
		RewriteRuleSubtreeStream stream_classDef=new RewriteRuleSubtreeStream(adaptor,"rule classDef");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(53, 45);
		try
		{
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:53:15: ( ( classDef SEMI )+ -> ^( ClassesList ( classDef )+ ) )
			DebugEnterAlt(1);
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:54:2: ( classDef SEMI )+
			{
			DebugLocation(54, 2);
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:54:2: ( classDef SEMI )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==CLASS))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:54:3: classDef SEMI
					{
					DebugLocation(54, 3);
					PushFollow(Follow._classDef_in_program181);
					classDef1=classDef();
					PopFollow();

					stream_classDef.Add(classDef1.Tree);
					DebugLocation(54, 12);
					SEMI2=(CommonToken)Match(input,SEMI,Follow._SEMI_in_program183);  
					stream_SEMI.Add(SEMI2);


					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: classDef
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 54:19: -> ^( ClassesList ( classDef )+ )
			{
				DebugLocation(54, 22);
				// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:54:22: ^( ClassesList ( classDef )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(54, 24);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(ClassesList, "ClassesList"), root_1);

				DebugLocation(54, 36);
				if (!(stream_classDef.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_classDef.HasNext )
				{
					DebugLocation(54, 36);
					adaptor.AddChild(root_1, stream_classDef.NextTree());

				}
				stream_classDef.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
		//throw e;
			}

		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(54, 45);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_classDef();
	partial void LeaveRule_classDef();

	// $ANTLR start "classDef"
	// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:56:1: classDef : CLASS typeName ( INHERITS typeName )? LCURLY featureList RCURLY -> ^( Class typeName featureList ( typeName )? ) ;
	[GrammarRule("classDef")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> classDef()
	{
		EnterRule_classDef();
		EnterRule("classDef", 2);
		TraceIn("classDef", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken CLASS3 = default(CommonToken);
		CommonToken INHERITS5 = default(CommonToken);
		CommonToken LCURLY7 = default(CommonToken);
		CommonToken RCURLY9 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> typeName4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> typeName6 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> featureList8 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree CLASS3_tree = default(CommonTree);
		CommonTree INHERITS5_tree = default(CommonTree);
		CommonTree LCURLY7_tree = default(CommonTree);
		CommonTree RCURLY9_tree = default(CommonTree);
		RewriteRuleITokenStream stream_CLASS=new RewriteRuleITokenStream(adaptor,"token CLASS");
		RewriteRuleITokenStream stream_LCURLY=new RewriteRuleITokenStream(adaptor,"token LCURLY");
		RewriteRuleITokenStream stream_INHERITS=new RewriteRuleITokenStream(adaptor,"token INHERITS");
		RewriteRuleITokenStream stream_RCURLY=new RewriteRuleITokenStream(adaptor,"token RCURLY");
		RewriteRuleSubtreeStream stream_typeName=new RewriteRuleSubtreeStream(adaptor,"rule typeName");
		RewriteRuleSubtreeStream stream_featureList=new RewriteRuleSubtreeStream(adaptor,"rule featureList");
		try { DebugEnterRule(GrammarFileName, "classDef");
		DebugLocation(56, 41);
		try
		{
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:56:9: ( CLASS typeName ( INHERITS typeName )? LCURLY featureList RCURLY -> ^( Class typeName featureList ( typeName )? ) )
			DebugEnterAlt(1);
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:57:2: CLASS typeName ( INHERITS typeName )? LCURLY featureList RCURLY
			{
			DebugLocation(57, 2);
			CLASS3=(CommonToken)Match(input,CLASS,Follow._CLASS_in_classDef204);  
			stream_CLASS.Add(CLASS3);

			DebugLocation(57, 8);
			PushFollow(Follow._typeName_in_classDef206);
			typeName4=typeName();
			PopFollow();

			stream_typeName.Add(typeName4.Tree);
			DebugLocation(57, 17);
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:57:17: ( INHERITS typeName )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==INHERITS))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:57:18: INHERITS typeName
				{
				DebugLocation(57, 18);
				INHERITS5=(CommonToken)Match(input,INHERITS,Follow._INHERITS_in_classDef209);  
				stream_INHERITS.Add(INHERITS5);

				DebugLocation(57, 27);
				PushFollow(Follow._typeName_in_classDef211);
				typeName6=typeName();
				PopFollow();

				stream_typeName.Add(typeName6.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(57, 38);
			LCURLY7=(CommonToken)Match(input,LCURLY,Follow._LCURLY_in_classDef215);  
			stream_LCURLY.Add(LCURLY7);

			DebugLocation(57, 45);
			PushFollow(Follow._featureList_in_classDef217);
			featureList8=featureList();
			PopFollow();

			stream_featureList.Add(featureList8.Tree);
			DebugLocation(57, 57);
			RCURLY9=(CommonToken)Match(input,RCURLY,Follow._RCURLY_in_classDef219);  
			stream_RCURLY.Add(RCURLY9);



			{
			// AST REWRITE
			// elements: featureList, typeName, typeName
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 57:64: -> ^( Class typeName featureList ( typeName )? )
			{
				DebugLocation(58, 3);
				// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:58:3: ^( Class typeName featureList ( typeName )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(58, 5);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(Class, "Class"), root_1);

				DebugLocation(58, 11);
				adaptor.AddChild(root_1, stream_typeName.NextTree());
				DebugLocation(58, 20);
				adaptor.AddChild(root_1, stream_featureList.NextTree());
				DebugLocation(58, 32);
				// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:58:32: ( typeName )?
				if (stream_typeName.HasNext)
				{
					DebugLocation(58, 32);
					adaptor.AddChild(root_1, stream_typeName.NextTree());

				}
				stream_typeName.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
		//throw e;
			}

		finally
		{
			TraceOut("classDef", 2);
			LeaveRule("classDef", 2);
			LeaveRule_classDef();
		}
		DebugLocation(58, 41);
		} finally { DebugExitRule(GrammarFileName, "classDef"); }
		return retval;

	}
	// $ANTLR end "classDef"

	partial void EnterRule_featureList();
	partial void LeaveRule_featureList();

	// $ANTLR start "featureList"
	// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:60:1: featureList : ( feature SEMI )* -> ^( FeatureList ( feature )* ) ;
	[GrammarRule("featureList")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> featureList()
	{
		EnterRule_featureList();
		EnterRule("featureList", 3);
		TraceIn("featureList", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken SEMI11 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> feature10 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree SEMI11_tree = default(CommonTree);
		RewriteRuleITokenStream stream_SEMI=new RewriteRuleITokenStream(adaptor,"token SEMI");
		RewriteRuleSubtreeStream stream_feature=new RewriteRuleSubtreeStream(adaptor,"rule feature");
		try { DebugEnterRule(GrammarFileName, "featureList");
		DebugLocation(60, 43);
		try
		{
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:60:12: ( ( feature SEMI )* -> ^( FeatureList ( feature )* ) )
			DebugEnterAlt(1);
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:61:2: ( feature SEMI )*
			{
			DebugLocation(61, 2);
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:61:2: ( feature SEMI )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==ID))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:61:3: feature SEMI
					{
					DebugLocation(61, 3);
					PushFollow(Follow._feature_in_featureList245);
					feature10=feature();
					PopFollow();

					stream_feature.Add(feature10.Tree);
					DebugLocation(61, 11);
					SEMI11=(CommonToken)Match(input,SEMI,Follow._SEMI_in_featureList247);  
					stream_SEMI.Add(SEMI11);


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }



			{
			// AST REWRITE
			// elements: feature
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 61:18: -> ^( FeatureList ( feature )* )
			{
				DebugLocation(61, 21);
				// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:61:21: ^( FeatureList ( feature )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(61, 23);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FeatureList, "FeatureList"), root_1);

				DebugLocation(61, 35);
				// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:61:35: ( feature )*
				while ( stream_feature.HasNext )
				{
					DebugLocation(61, 35);
					adaptor.AddChild(root_1, stream_feature.NextTree());

				}
				stream_feature.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
		//throw e;
			}

		finally
		{
			TraceOut("featureList", 3);
			LeaveRule("featureList", 3);
			LeaveRule_featureList();
		}
		DebugLocation(61, 43);
		} finally { DebugExitRule(GrammarFileName, "featureList"); }
		return retval;

	}
	// $ANTLR end "featureList"

	partial void EnterRule_feature();
	partial void LeaveRule_feature();

	// $ANTLR start "feature"
	// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:63:1: feature : ( ( ID LPAREN ( formalList )? RPAREN COLON typeName LCURLY expr RCURLY ) -> ^( FuncDef ID typeName expr ( formalList )? ) | localOrFieldInit );
	[GrammarRule("feature")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> feature()
	{
		EnterRule_feature();
		EnterRule("feature", 4);
		TraceIn("feature", 4);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken ID12 = default(CommonToken);
		CommonToken LPAREN13 = default(CommonToken);
		CommonToken RPAREN15 = default(CommonToken);
		CommonToken COLON16 = default(CommonToken);
		CommonToken LCURLY18 = default(CommonToken);
		CommonToken RCURLY20 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> formalList14 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> typeName17 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> expr19 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> localOrFieldInit21 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree ID12_tree = default(CommonTree);
		CommonTree LPAREN13_tree = default(CommonTree);
		CommonTree RPAREN15_tree = default(CommonTree);
		CommonTree COLON16_tree = default(CommonTree);
		CommonTree LCURLY18_tree = default(CommonTree);
		CommonTree RCURLY20_tree = default(CommonTree);
		RewriteRuleITokenStream stream_COLON=new RewriteRuleITokenStream(adaptor,"token COLON");
		RewriteRuleITokenStream stream_RPAREN=new RewriteRuleITokenStream(adaptor,"token RPAREN");
		RewriteRuleITokenStream stream_LCURLY=new RewriteRuleITokenStream(adaptor,"token LCURLY");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_LPAREN=new RewriteRuleITokenStream(adaptor,"token LPAREN");
		RewriteRuleITokenStream stream_RCURLY=new RewriteRuleITokenStream(adaptor,"token RCURLY");
		RewriteRuleSubtreeStream stream_typeName=new RewriteRuleSubtreeStream(adaptor,"rule typeName");
		RewriteRuleSubtreeStream stream_formalList=new RewriteRuleSubtreeStream(adaptor,"rule formalList");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "feature");
		DebugLocation(63, 22);
		try
		{
			// C:\\Users\\KvanTTT\\Documents\\Study\\Compilators\\CompilerConstruction\\CoolCompiler\\CoolGrammar.g:63:8: ( ( ID LPAREN ( formalList )? RPAREN COLON typeName LCURLY expr RCURLY ) -> ^( FuncDef ID typeName expr ( formalList )? ) | localOrFieldInit )
			int alt5=2;
			try { DebugEnterDecision(5, false);
			int LA5_0 = input.LA(1);

			if ((LA5_0==ID))
			{
				int LA5_1 = input.LA(2);
